--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-d3-speedometer": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
